# pyweb_team7_project

./: README.md  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  test.db  test_git.py
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 1f044b17b050_init.py  2d6307cf13e3_fix_qr3.py  42721cacb428_nullable_true.py  4d650e93d385_init.py  4f1237ffb589_fix_qr4.py  52e7553de8ab_new.py  55c10b0ac1ac_add_qr.py  59232b530d6a_fix_qr5.py  6979199a32ce_add_roles_for_user.py  6c193e39c7e1_initial_migration.py  72b38f9429b4_init.py  8eed8553ece8_images_qr_17_11.py  994724d78db1_fix_qr.py  a8f71d517441_add_models.py  abc0d40ab3ad_file_url.py  bffda805be8f_fix_qrfinal.py  cc1ccaf2d423_checkup.py  e751585adb91_fix_qr2.py  f980057d0d58_image_model.py  fedf226b9cfb_add_access_token.py
pyweb_team7_project/: schemas.py
pyweb_team7_project/conf/: config.py
pyweb_team7_project/database/: db.py  models.py
pyweb_team7_project/repository/: comments.py  images.py  tags.py  transformations.py  users.py
pyweb_team7_project/routes/: auth.py  comments.py  images.py  qrcode_generation.py  tags.py  transformations.py  users.py
pyweb_team7_project/services/: auth.py  cloudinary.py  email.py  qrcode_generation.py  (+1 more)
tests/: conftest.py  test_QR_gen.py  test_db.py  test_e2e_routes_auth.py  test_e2e_routes_comments.py  test_email_service.py  test_repository_users.py  test_roles_update.py  test_routes_images.py  test_routes_users.py  test_services_auth.py  test_tags_repo.py  test_tags_routes.py  test_unit_repository_images.py  test_unit_repository_transformations.py  tests_routes_tags_new.py
